# Vivre-les-series

./: .gitignore  README.md
VivreLesSeries/VivreLesSeries.API/: Program.cs  VivreLesSeries.API.csproj  appsettings.json
VivreLesSeries/VivreLesSeries.API/Controllers/: BetController.cs  IdentityController.cs
VivreLesSeries/VivreLesSeries.API/Identity/: IdentityRequest.cs
VivreLesSeries/VivreLesSeries.API/Properties/: launchSettings.json
VivreLesSeries/VivreLesSeries.Business/: BetCo.Business.csproj  BetService.cs
VivreLesSeries/VivreLesSeries.Core/: BetCo.Core.csproj
VivreLesSeries/VivreLesSeries.Core/Business/: IBetService.cs
VivreLesSeries/VivreLesSeries.Core/Repository/: IBetRepository.cs
VivreLesSeries/VivreLesSeries.Entity/: Bet.cs  User.cs
VivreLesSeries/VivreLesSeries.Repository/: BetCo.Repository.csproj  BetRepository.cs
VivreLesSeries/VivreLesSeries.Repository/Context/: BetCoContext.cs
VivreLesSeries/VivreLesSeries.Repository/Migrations/: 20240315132019_Init.Designer.cs  20240315132019_Init.cs  20240315133550_AddCreationDateInUser.Designer.cs  20240315133550_AddCreationDateInUser.cs  20240315143536_AddRefToUserId.Designer.cs  20240315143536_AddRefToUserId.cs  BetCoContextModelSnapshot.cs
back/VivreLesSeries/VivreLesSeries.API/: Program.cs  VivreLesSeries.API.csproj  appsettings.json
back/VivreLesSeries/VivreLesSeries.API/Controllers/: CommentsController.cs  IdentityController.cs  SeriesController.cs  UsersController.cs
back/VivreLesSeries/VivreLesSeries.API/Identity/: IdentityRequest.cs
back/VivreLesSeries/VivreLesSeries.Business/: CommentService.cs  SerieService.cs  TmdbService.cs  UserSessionService.cs  VivreLesSeries.Business.csproj
back/VivreLesSeries/VivreLesSeries.Core/: VivreLesSeries.Core.csproj
back/VivreLesSeries/VivreLesSeries.Core/Business/: ICommentService.cs  ISeriesService.cs  ITmdbService.cs  IUserSessionService.cs
back/VivreLesSeries/VivreLesSeries.Core/Repository/: ICommentRepository.cs  ISerieRepository.cs  IUserRepository.cs
back/VivreLesSeries/VivreLesSeries.Entity/: Comment.cs  Image.cs  Rating.cs  ResponseMessage.cs  Serie.cs  SerieMinimalDto.cs  TmdbResponse.cs  User.cs  UserSession.cs
back/VivreLesSeries/VivreLesSeries.Entity/DTO/: CommentDto.cs  LinkSessionDto.cs  RatingDto.cs  UserDto.cs  UserSessionDto.cs
back/VivreLesSeries/VivreLesSeries.Repository/: CommentRepository.cs  SerieRepository.cs  UserRepository.cs  VivreLesSeries.Repository.csproj
back/VivreLesSeries/VivreLesSeries.Repository/Context/: UserSerieContext.cs  UserSerieContextFactory.cs
back/VivreLesSeries/VivreLesSeries.Repository/Database/: VivreLesSeries.db  VivreLesSeries.db-shm  VivreLesSeries.db-wal
back/VivreLesSeries/VivreLesSeries.Repository/Migrations/: 20250531170206_InitialCreate.Designer.cs  20250531170206_InitialCreate.cs  (+9 more)
backend/: CHANGELOG.md  LICENSE  serie.db  vivrelesseries.cabal
backend/VivreLesSeries/: AddUser.bru  AllUsers.bru  Get Series.bru  Hugo.bru  ListeSerie.bru  UserByNicknamePassword.bru  bruno.json
backend/app/: Main.hs
backend/src/Entities/: Comment.hs  Favorite.hs  Movie.hs  MovieExtern.hs  User.hs
backend/src/Selda/: CreateDB.hs  UserTable.hs
backend/src/Servant/: Authentification.hs  ServantMain.hs  TMDBServant.hs  UserServant.hs
backend/src/UseCases/: PullUser.hs  UseCaseSerie.hs
front/: index.html  package-lock.json  package.json
front/src/: app.scss  app.ts  index.scss  route_function.ts
front/src/API/: main.ts
front/src/assets/: variable.scss
front/src/partials/: header.component.ts  header.scss
front/src/shared/: function.ts
front/src/type_interfaces/: type.interfaces.ts
(+18 files in other folders)
